重构搜索功能